; ModuleID = '/home/carl/AnghaBench/8cc/extr_parse.c_read_label_tail.c'
source_filename = "/home/carl/AnghaBench/8cc/extr_parse.c_read_label_tail.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*)* @read_label_tail to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @read_label_tail(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %5 = call i32* (...) @read_stmt()
  store i32* %5, i32** %3, align 8
  %6 = call i32* (...) @make_vector()
  store i32* %6, i32** %4, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = load i32*, i32** %2, align 8
  %9 = call i32 @vec_push(i32* %7, i32* %8)
  %10 = load i32*, i32** %3, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %12, label %16

12:                                               ; preds = %1
  %13 = load i32*, i32** %4, align 8
  %14 = load i32*, i32** %3, align 8
  %15 = call i32 @vec_push(i32* %13, i32* %14)
  br label %16

16:                                               ; preds = %12, %1
  %17 = load i32*, i32** %4, align 8
  %18 = call i32* @ast_compound_stmt(i32* %17)
  ret i32* %18
}

declare dso_local i32* @read_stmt(...) #1

declare dso_local i32* @make_vector(...) #1

declare dso_local i32 @vec_push(i32*, i32*) #1

declare dso_local i32* @ast_compound_stmt(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
